hphp/test/zend/good/ext/session/tests/016.php.skipif
<?php
if (!extension_loaded("session")) {
    die("skip Session module not loaded");
}
?>