hphp/test/zend/bad/ext/date/tests/gmstrftime_variation2.php.skipif
<?php
if(PHP_INT_SIZE != 4 ) {
  die("skip Test is not valid for 64-bit");
}
?>